@@ -41,6 +41,7 @@ import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+import static uk.gov.hmcts.probate.model.Constants.CHANNEL_CHOICE_BULKSCAN;
 
 class PrepareNocServiceTest {
 
@@ -82,7 +83,7 @@ class PrepareNocServiceTest {
         caseData.put("solsSOTForenames","OldSolicitorFirstName");
         caseData.put("solsSOTSurname","OldSolicitorLastName");
         caseData.put("solsSolicitorEmail","OldSolicitor@gmail.com");
-        
+
         when(objectMapper.convertValue(caseData.get("changeOrganisationRequestField"),
                 ChangeOrganisationRequest.class)).thenReturn(changeRequest);
         when(objectMapper.convertValue(any(), any(TypeReference.class))).thenReturn(changeOfRepresentatives);
@@ -125,8 +126,60 @@ class PrepareNocServiceTest {
         verify(organisationApi, times(1))
                 .findSolicitorOrganisation(anyString(), anyString(), anyString());
         verify(assignCaseAccessClient, times(1))
-                .applyDecision(anyString(), anyString(), any(
-                DecisionRequest.class));
+                .applyDecision(anyString(), anyString(), any(DecisionRequest.class));
+    }
+
+    @Test
+    void testApplyDecisionForBulkScanCases() {
+        caseData.put("changeOfRepresentatives",null);
+        caseData.put("channelChoice",CHANNEL_CHOICE_BULKSCAN);
+        when(objectMapper.convertValue(any(), any(TypeReference.class))).thenReturn(null);
+        CallbackRequest request = CallbackRequest.builder()
+                .caseDetails(CaseDetails.builder().data(caseData).caseTypeId("GrantOfRepresentation").id(0L).build())
+                .build();
+
+        underTest.applyDecision(request, "testAuth");
+        verify(organisationApi, times(1))
+                .findOrganisationByOrgId(anyString(), anyString(), anyString());
+        verify(organisationApi, times(1))
+                .findSolicitorOrganisation(anyString(), anyString(), anyString());
+        verify(assignCaseAccessClient, times(1))
+                .applyDecision(anyString(), anyString(), any(DecisionRequest.class));
+    }
+
+    @Test
+    void testApplyDecisionForCaveatBulkScanCases() {
+        caseData.put("changeOfRepresentatives",null);
+        caseData.put("paperForm","Yes");
+        when(objectMapper.convertValue(any(), any(TypeReference.class))).thenReturn(null);
+        CallbackRequest request = CallbackRequest.builder()
+                .caseDetails(CaseDetails.builder().data(caseData).caseTypeId("Caveat").id(0L).build())
+                .build();
+
+        underTest.applyDecision(request, "testAuth");
+        verify(organisationApi, times(1))
+                .findOrganisationByOrgId(anyString(), anyString(), anyString());
+        verify(organisationApi, times(1))
+                .findSolicitorOrganisation(anyString(), anyString(), anyString());
+        verify(assignCaseAccessClient, times(1))
+                .applyDecision(anyString(), anyString(), any(DecisionRequest.class));
+    }
+
+    @Test
+    void testApplyDecisionForCaveatDigitalCases() {
+        caseData.put("paperForm","Yes");
+        caseData.put("caveatorEmailAddress", "testEmail@gmail.com");
+        CallbackRequest request = CallbackRequest.builder()
+                .caseDetails(CaseDetails.builder().data(caseData).caseTypeId("Caveat").id(0L).build())
+                .build();
+
+        underTest.applyDecision(request, "testAuth");
+        verify(organisationApi, times(1))
+                .findOrganisationByOrgId(anyString(), anyString(), anyString());
+        verify(organisationApi, times(1))
+                .findSolicitorOrganisation(anyString(), anyString(), anyString());
+        verify(assignCaseAccessClient, times(1))
+                .applyDecision(anyString(), anyString(), any(DecisionRequest.class));
     }
 
     @Test
@@ -141,8 +194,7 @@ class PrepareNocServiceTest {
         verify(organisationApi, times(1))
                 .findSolicitorOrganisation(anyString(), anyString(), anyString());
         verify(assignCaseAccessClient, times(1))
-                .applyDecision(anyString(), anyString(), any(
-                        DecisionRequest.class));
+                .applyDecision(anyString(), anyString(), any(DecisionRequest.class));
     }
 
     @Test
@@ -158,8 +210,7 @@ class PrepareNocServiceTest {
         verify(organisationApi, times(1))
                 .findSolicitorOrganisation(anyString(), anyString(), anyString());
         verify(assignCaseAccessClient, times(1))
-                .applyDecision(anyString(), anyString(), any(
-                        DecisionRequest.class));
+                .applyDecision(anyString(), anyString(), any(DecisionRequest.class));
     }
 
     @Test
@@ -173,8 +224,7 @@ class PrepareNocServiceTest {
         verify(organisationApi, times(1))
                 .findOrganisationByOrgId(anyString(), anyString(), anyString());
         verify(assignCaseAccessClient, times(1))
-                .applyDecision(anyString(), anyString(), any(
-                        DecisionRequest.class));
+                .applyDecision(anyString(), anyString(), any(DecisionRequest.class));
     }
 
     @Test
@@ -188,8 +238,7 @@ class PrepareNocServiceTest {
         verify(organisationApi, times(1))
                 .findSolicitorOrganisation(anyString(), anyString(), anyString());
         verify(assignCaseAccessClient, times(1))
-                .applyDecision(anyString(), anyString(), any(
-                        DecisionRequest.class));
+                .applyDecision(anyString(), anyString(), any(DecisionRequest.class));
     }
 
     @Test
@@ -206,22 +255,22 @@ class PrepareNocServiceTest {
 
 
         assertEquals(address.getAddressLine1(),
-                organisationEntityResponse.getContactInformation().get(0).getAddressLine1());
+                organisationEntityResponse.getContactInformation().getFirst().getAddressLine1());
         assertEquals(address.getCounty(),
-                organisationEntityResponse.getContactInformation().get(0).getCounty());
+                organisationEntityResponse.getContactInformation().getFirst().getCounty());
         assertEquals(address.getCountry(),
-                organisationEntityResponse.getContactInformation().get(0).getCountry());
+                organisationEntityResponse.getContactInformation().getFirst().getCountry());
         assertEquals(address.getPostTown(),
-                organisationEntityResponse.getContactInformation().get(0).getTownCity());
+                organisationEntityResponse.getContactInformation().getFirst().getTownCity());
         assertEquals(address.getPostCode(),
-                organisationEntityResponse.getContactInformation().get(0).getPostCode());
+                organisationEntityResponse.getContactInformation().getFirst().getPostCode());
 
     }
 
     private List<CollectionMember<ChangeOfRepresentative>> setupRepresentative() {
         DateTimeFormatter dateTimeFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ss.SSS'Z'");
 
-        List<CollectionMember<ChangeOfRepresentative>> representatives = new ArrayList();
+        List<CollectionMember<ChangeOfRepresentative>> representatives = new ArrayList<>();
         CollectionMember<ChangeOfRepresentative> removedRepresentative1 =
                 new CollectionMember<>(null, ChangeOfRepresentative
                         .builder()
